; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace.c_trace_current_buffer_lock_reserve.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace.c_trace_current_buffer_lock_reserve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.ring_buffer* }
%struct.ring_buffer = type { i32 }
%struct.ring_buffer_event = type { i32 }

@global_trace = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ring_buffer_event* @trace_current_buffer_lock_reserve(%struct.ring_buffer** %0, i32 %1, i64 %2, i64 %3, i32 %4) #0 {
  %6 = alloca %struct.ring_buffer**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.ring_buffer** %0, %struct.ring_buffer*** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load %struct.ring_buffer*, %struct.ring_buffer** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @global_trace, i32 0, i32 0), align 8
  %12 = load %struct.ring_buffer**, %struct.ring_buffer*** %6, align 8
  store %struct.ring_buffer* %11, %struct.ring_buffer** %12, align 8
  %13 = load %struct.ring_buffer**, %struct.ring_buffer*** %6, align 8
  %14 = load %struct.ring_buffer*, %struct.ring_buffer** %13, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load i64, i64* %8, align 8
  %17 = load i64, i64* %9, align 8
  %18 = load i32, i32* %10, align 4
  %19 = call %struct.ring_buffer_event* @trace_buffer_lock_reserve(%struct.ring_buffer* %14, i32 %15, i64 %16, i64 %17, i32 %18)
  ret %struct.ring_buffer_event* %19
}

declare dso_local %struct.ring_buffer_event* @trace_buffer_lock_reserve(%struct.ring_buffer*, i32, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
